--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,11 @@ repositories {
 
 dependencies {
 
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
     implementation("org.springframework.boot:spring-boot-starter-web:3.5.0")
+    implementation 'org.springframework.security:spring-security-crypto:6.5.0'
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.5.0")
     implementation("org.postgresql:postgresql:42.7.7")
     implementation("org.liquibase:liquibase-core:4.32.0")
