--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     implementation("org.springframework.boot:spring-boot-starter-web:3.5.0")
-    implementation 'org.springframework.security:spring-security-crypto:6.5.0'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.4.3'
+
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.5.0")
     implementation("org.postgresql:postgresql:42.7.7")
     implementation("org.liquibase:liquibase-core:4.32.0")
+    implementation 'org.springframework.security:spring-security-crypto:6.5.0'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
