finish wether service logic

--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,19 @@ dependencies {
     implementation("org.liquibase:liquibase-core:4.32.0")
     implementation 'org.springframework.security:spring-security-crypto:6.5.0'
 
+    testImplementation("org.springframework.boot:spring-boot-starter-test:3.5.0")
+    testImplementation("org.springframework.boot:spring-boot-testcontainers:3.4.5")
+    testImplementation("org.testcontainers:junit-jupiter:1.21.0")
+    testImplementation("org.testcontainers:postgresql:1.21.0")
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-test {
-    useJUnitPlatform()
+testing {
+    suites {
+        test {
+            useJUnitJupiter()
+        }
+    }
 }
