--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation("org.liquibase:liquibase-core:4.32.0")
     implementation 'org.springframework.security:spring-security-crypto:6.5.0'
 
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+
     testImplementation("org.springframework.boot:spring-boot-starter-test:3.5.0")
     testImplementation("org.springframework.boot:spring-boot-testcontainers:3.4.5")
     testImplementation("org.testcontainers:junit-jupiter:1.21.0")
